# llm-poker-arena

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  USAGE.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.md  feature.md
.github/workflows/: deploy-web.yml  python.yml  web.yml
docs/: exploit-pilot-postmortem.md  llm-decision-profile.md
docs/superpowers/notes/: pokerkit-0.7.3-api.md
docs/superpowers/plans/: 2026-04-23-llm-poker-arena-phase-1.md  2026-04-24-llm-poker-arena-phase-2a.md  2026-04-24-llm-poker-arena-phase-2b.md  2026-04-24-llm-poker-arena-phase-2c-human-cli.md  (+8 more)
scripts/: analyze_decision_types.py  analyze_pilot.py  smoke_gemini.py  smoke_gpt55_effort.py  smoke_openrouter_gemini.py  smoke_opus.py
tests/: conftest.py
tests/differential/: __init__.py  test_legal_actions_vs_pokerkit.py
tests/integration/: test_human_vs_llm_mock.py  test_human_vs_llm_real_anthropic.py  test_llm_session_mock.py  test_llm_session_mock_hud.py  test_llm_session_mock_k1.py  test_llm_session_real_anthropic.py  test_llm_session_real_anthropic_hud.py  test_llm_session_real_anthropic_math.py  test_llm_session_real_anthropic_math_equity.py  test_llm_session_real_deepseek.py  test_llm_session_real_multi_provider.py
tests/property/: __init__.py  test_auto_rebuy.py  test_card_conservation.py  test_chip_conservation.py  test_min_raise_reopen.py  test_playerview_projection_pure.py  test_public_replay_no_leak.py  test_stress_50k_sequences.py
tests/unit/: test_access_control.py  test_agent_metadata.py  test_analysis_baseline.py  test_analysis_plots.py  test_anthropic_probe.py  test_anthropic_provider.py  test_async_agent_abc.py  test_audit.py  test_batch_flush_durability.py  test_build_player_view_opponent_stats.py  test_cli_play_smoke.py  test_cli_play_with_llm.py  test_config.py  test_default_safe_action.py  test_deterministic_deck.py  test_duckdb_smoke.py  test_engine_public_api.py  test_equity_backend.py  test_get_opponent_stats_tool.py  test_hand_equity_vs_ranges_tool.py  test_hud_counters_3bet.py  test_hud_counters_af.py  test_hud_counters_pfr.py  test_hud_counters_vpip.py  test_hud_counters_wtsd.py  test_human_cli_agent.py  test_human_cli_integration.py  test_integration_thousand_hands.py  test_jsonl_writer.py  test_layer_builders.py  test_layer_builders_temp_seed.py  test_legal_actions.py  test_llm_agent_react_loop.py  test_llm_agent_react_loop_k1.py  test_llm_types.py  test_max_total_tokens_cap.py  test_meta.py  test_metrics_action_distribution.py  test_metrics_pfr.py  test_metrics_vpip.py  (+32 more)
web/: index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  vite.config.ts
web/e2e/: replay-happy-path.spec.ts  screenshot.spec.ts
web/scripts/: bundle-demos.mjs  generate-demo-6llm.py  generate-demo-bots.py  generate-demo-tournament.py  generate-demo.py  probe-gemini.py  probe-kimi.py
web/src/: App.tsx  index.css  react-free-playing-cards.d.ts  types.ts
(+134 files in other folders)
