[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "llm-poker-arena"
version = "0.1.0"
description = "Multi-agent LLM 6-max NLHE simulation platform (Phase 1)"
requires-python = ">=3.11"
authors = [{ name = "zcheng256" }]
dependencies = [
    "pokerkit>=0.7,<0.8",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.21",
    "hypothesis>=6.100",
    "ruff>=0.4",
    "mypy>=1.8",
]

[tool.hatch.build.targets.wheel]
packages = ["src/llm_poker_arena"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "PT"]
ignore = ["E501"]  # line length already governed by formatter

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011"]  # hypothesis may use `assert` freely

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src", "tests"]
# PokerKit ships without stubs at time of writing; allow implicit Any on its imports only.
[[tool.mypy.overrides]]
module = "pokerkit.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.4"
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"
